Minor text edits and preventing asteroid overflow creating scroll bars.

--- a/_sass/_asteroids.scss
+++ b/_sass/_asteroids.scss
@@ -10,6 +10,7 @@
 	justify-content: space-around;
 	width: 100%;
 	padding: 15px 0;
+	overflow: hidden;
 }
 
 .object {
